Prevent Compiling Empty List of Attribute Group Filters
Fixes: #299